<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    tools:context=".BankIntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/new_background_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-580dp"
                android:layout_marginBottom="400dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="0dp"
                    app:srcCompat="@drawable/the_bank_logo" />

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/banknamefirstpart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:padding="0dp"
                        android:text="@string/BankFirstName"
                        android:textColor="@color/darkerBrown"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/banknamesecondpart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:padding="0dp"
                        android:text="@string/BankSecondName"
                        android:textColor="@color/teal_200"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/banknamefirstpart"
                        app:layout_constraintTop_toTopOf="@id/banknamefirstpart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.05"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintStart_toEndOf="@id/banknamefirstpart" />


                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-80dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:elevation="2dp"
                    android:text="@string/BankingIntroMsg"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_personalbanking"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:background="@drawable/banking_btn_gradients"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_marginEnd="10dp"
                        android:text="@string/personalbankingbtn" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnmortgage"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:background="@drawable/banking_btn_gradients"
                        android:text="@string/mortgagebtn" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_investment"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:background="@drawable/banking_btn_gradients"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:text="@string/investmentbtn" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>