<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navyBlue"
    tools:context=".MortgageIntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="583dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/key_handover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-580dp"
                android:layout_marginBottom="400dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="0dp"
                    app:srcCompat="@drawable/the_bank_logo" />

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/banknamefirstpart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:padding="0dp"
                        android:text="@string/BankFirstName"
                        android:textColor="@color/darkerBrown"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/banknamesecondpart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:padding="0dp"
                        android:text="@string/BankSecondName"
                        android:textColor="@color/teal_700"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="0.05"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintStart_toEndOf="@id/banknamefirstpart" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    android:text="@string/MortgageIntroMsg"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_mortgage"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/second_gradient_btn"
                        android:text="@string/getstarted"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>