<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navyBlue"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    tools:context=".MortgageApplyFormActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-580dp"
                android:layout_marginBottom="400dp"
                android:orientation="vertical">-->

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:padding="0dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/the_bank_logo" />

            <LinearLayout
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/banknamefirstpart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:padding="0dp"
                    android:text="@string/BankFirstName"
                    android:textColor="@color/darkerBrown"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/banknamesecondpart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/BankSecondName"
                    android:textColor="@color/teal_200"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/banknamefirstpart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/banknamefirstpart"
                    app:layout_constraintTop_toTopOf="@id/banknamefirstpart"
                    app:layout_constraintVertical_bias="0.0" />


            </LinearLayout>

<!--            </LinearLayout>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mortgage Application Form"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:background="@drawable/card_design">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Income and Employment data"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="8dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/applicantIncome"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/white"
                        android:padding="8dp"
                        android:inputType="text"
                        android:hint="Income per annum (CAD)"
                        android:drawablePadding="8dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/employerName"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/white"
                        android:padding="8dp"
                        android:inputType="text"
                        android:hint="Employer's name"
                        android:drawablePadding="8dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/employerAddress"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/white"
                        android:padding="8dp"
                        android:inputType="text"
                        android:hint="Employer address"
                        android:drawablePadding="8dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/emloyerEmail"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        android:backgroundTint="@color/white"
                        android:padding="8dp"
                        android:inputType="textEmailAddress"
                        android:hint="Employer's email"
                        android:drawablePadding="8dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:background="@drawable/card_design">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="Pick a repayment plan"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/shortTermDescription"
                                android:layout_width="230dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="10dp"
                                android:text="@string/short_term_desc" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/shortTermRepayBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:background="@drawable/application_form_btn"
                                android:padding="6dp"
                                android:text="@string/short_term__repay"
                                android:textColor="@color/white"
                                android:textSize="11sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/mediumTermDescription"
                                android:layout_width="230dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="10dp"
                                android:text="@string/medium_term_desc" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/mediumTermRepayBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:background="@drawable/application_form_btn"
                                android:padding="6dp"
                                android:text="@string/medium_term__repay"
                                android:textColor="@color/white"
                                android:textSize="11sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="30dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/longTermDescription"
                                android:layout_width="230dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="10dp"
                                android:text="@string/long_term_desc" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/longTermRepayBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="24dp"
                                android:background="@drawable/application_form_btn"
                                android:padding="6dp"
                                android:text="@string/long_term__repay"
                                android:textColor="@color/white"
                                android:textSize="11sp" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>